# Bsdiff-GUI-Tool

./: .gitignore  README.md  settings.gradle.kts
.fleet/: receipt.json
Bsdiff/: .gitignore  CMakeLists.txt  README.md  main.c  main.h  pick_file.c  warn.c
Bsdiff/bsdiff-win/: bsdiff.c
Bsdiff/bspatch-win/: bspatch.c
Bsdiff/jni/: jni-bsdiff.c  jni_native.h
Bsdiff/windows/: pick_file.c
composeApp/: build.gradle.kts
composeApp/release/: output-metadata.json
composeApp/release/baselineProfiles/0/: composeApp-release.dm
composeApp/release/baselineProfiles/1/: composeApp-release.dm
composeApp/src/androidMain/kotlin/org/xah/bsdiff/: App.kt  MainActivity.kt
composeApp/src/androidMain/kotlin/org/xah/bsdiff/logic/util/: File.android.kt  notice.android.kt
composeApp/src/androidMain/kotlin/org/xah/bsdiff/ui/screen/: CheckScreen.android.kt  SplitScreen.android.kt
composeApp/src/androidMain/res/values/: strings.xml
composeApp/src/commonMain/composeResources/drawable/: arrow_split.xml  folder_zip.xml  merge.xml  package.xml
composeApp/src/commonMain/kotlin/org/xah/bsdiff/logic/model/: Patch.kt  PatchContent.kt  PatchMeta.kt
composeApp/src/commonMain/kotlin/org/xah/bsdiff/logic/util/: File.kt  HPatch.kt  SnapshotStateListUtil.kt  notice.kt  (+2 more)
composeApp/src/commonMain/kotlin/org/xah/bsdiff/ui/: App.kt
composeApp/src/desktopMain/kotlin/org/xah/bsdiff/: main.kt
composeApp/src/iosMain/kotlin/org/xah/bsdiff/: MainViewController.kt  Platform.ios.kt
gradle/: libs.versions.toml
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp.xcodeproj/: project.pbxproj
(+36 files in other folders)
